--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Karl Isidor Johannes Nygren",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.15.4",
     "mocha": "^3.5.3",
     "pizzicato": "^0.6.1"
