--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "mocha": "^3.5.3",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.13",
     "pizzicato": "^0.6.1"
   }
