--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "author": "Karl Isidor Johannes Nygren",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "jsonwebtoken": "^8.0.1",
     "mocha": "^3.5.3",
     "moment": "^2.18.1",
     "mongoose": "^4.11.13",
