--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cron": "^1.3.0",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^8.0.1",
     "mocha": "^3.5.3",
     "moment": "^2.18.1",
+    "mongo-xlsx": "^1.0.12",
     "mongoose": "^4.11.13",
     "pizzicato": "^0.6.1"
   }
