--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,8 @@ build/Release
 node_modules/
 jspm_packages/
 
-public/exports/
+# Not the exported cron jobs again
+public/exports/*
 
 # Typescript v1 declaration files
 typings/
