Fixed recursive object model

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "jsonwebtoken": "^8.0.1",
     "mocha": "^3.5.3",
     "moment": "^2.18.1",
-    "mongo-xlsx": "^1.0.12",
+    "mongo-xlsx": "https://github.com/isidornygren/mongo-xlsx/tarball/901d4ea07f315160d8b038adad5c090b6f5d071b",
     "mongoose": "^4.11.13",
     "pizzicato": "^0.6.1"
   }
